<resources>
    <string name="app_name">Wolayta Eros</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="cat_title">Welcome to Wolayta Eros Categories</string>

    <string name="btn_delete">Delete</string>
    <string name="confirm_delete">Are you sure you want to delete this?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleted_success">logoutsuccessfully!</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Categories</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_account">Account</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share App</string>
    <string name="menu_contact">Contact Us</string>

    <string name="settings_title">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="change_lang">Change Language</string>

    <string name="cat_politics">Politics</string>
    <string name="cat_food">Cultural Food</string>
    <string name="cat_culture">Culture</string>
    <string name="cat_ads">Advertisement</string>
    <string name="cat_edu">Education</string>
    <string name="cat_infra">Infrastructure</string>
    <string name="cat_nature">Nature</string>
    <string name="cat_leader">Leader of Wolayta</string>
    <string name="cat_animals">Wild and Domestic Animal</string>
    <string name="cat_jobs">Job Work</string>
</resources>